...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L4A-V0-sji" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonLeftTop"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="epF-d7-MKm" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="126" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonCenterTop"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYU-rR-GaI" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonLeftMiddle"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aeB-sM-nSL" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="126" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonCenterMiddle"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m37-lO-MsR" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonLeftBottom"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ksL-Kf-8MK" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="126" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonCenterButtom"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gzx-go-sgD" customClass="DesignableButton" customModule="TicTacToe" customModuleProvider="target">
                                        <rect key="frame" x="252" y="0.0" width="98" height="90"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ButtonRightBottom"/>
                                        <state key="normal" backgroundImage="empty"/>
                                        <userDefinedRuntimeAttributes>
...
